# librustzcash

./: Cargo.toml
include/: librustzcash.h
librustzcash/: Cargo.toml
librustzcash/include/: librustzcash.h
librustzcash/src/: rustzcash.rs  sapling.rs
libzcashwallet/: Cargo.toml
libzcashwallet/src/: lib.rs
sapling-crypto/src/: redjubjub.rs
sapling-crypto/src/circuit/sapling/: mod.rs
sapling-crypto/src/primitives/: mod.rs
src/: equihash.rs  rustzcash.rs
src/tests/: key_components.rs
support/android/app/: build.gradle
support/android/app/src/main/: AndroidManifest.xml
support/android/app/src/main/java/cash/z/android/: AccountAdapter.kt  MainActivity.kt
support/android/app/src/main/res/layout/: accounts_item_row.xml  content_main.xml
support/android/app/src/main/res/values/: strings.xml
support/android/gradle/wrapper/: gradle-wrapper.properties
support/android/wallet/: build.gradle
support/android/wallet/src/main/: AndroidManifest.xml
support/android/wallet/src/main/java/cash/z/wallet/: JNIWallet.kt  Wallet.kt
zcash_client_backend/: Cargo.toml  build.rs
zcash_client_backend/proto/: compact_formats.proto  grpc_client.proto  service.proto
zcash_client_backend/src/: constants.rs  data.rs  lib.rs  note_encryption.rs  wallet.rs
zcash_client_backend/src/proto/: client.rs  compact_formats.rs  grpc_client.rs  mod.rs
zcash_client_backend/src/welding_rig/: block.proto  block.rs  mod.rs
zcash_primitives/: Cargo.toml
zcash_primitives/src/: block.rs  lib.rs  merkle_tree.rs  sapling.rs  serialize.rs
zcash_primitives/src/jubjub/: mod.rs
zcash_primitives/src/transaction/: components.rs  mod.rs
zcash_primitives/src/transaction/tests/: data.rs  mod.rs  testdata.rs
zcash_proofs/: Cargo.toml
zcash_proofs/src/: lib.rs  sapling.rs
zcash_proofs/src/sapling/: prover.rs
zcash_wallet/: Cargo.toml
zcash_wallet/examples/: rpcsync.rs
zcash_wallet/src/: account.rs  address.rs  builder.rs  constants.rs  keystore.rs  lib.rs  prover.rs  sender.rs  tests.rs  types.rs  wallet.rs
zcash_wallet/src/chain/: mod.rs
zcash_wallet/src/chain/sync/: merkle_tree.rs  mod.rs  rpc.rs
zcash_wallet/src/transaction/: builder.rs  mod.rs
zip32/: Cargo.toml
zip32/src/: lib.rs
