[package]
name = "zcash_client_backend"
version = "0.0.0"
authors = [
    "Jack Grigg <jack@z.cash>",
]

[dependencies]
hex = "0.3"
pairing = { path = "../pairing" }
protobuf = "2"
sapling-crypto = { path = "../sapling-crypto" }
zcash_primitives = { path = "../zcash_primitives" }
zip32 = { path = "../zip32" }
