[package]
name = "zcash_wallet"
version = "0.0.0"
authors = [
    "Jack Grigg <jack@z.cash>",
]

[dependencies]
failure = "0.1"
pairing = { path = "../pairing" }
rand = "0.4"
sapling-crypto = { path = "../sapling-crypto" }
zcash_primitives = { path = "../zcash_primitives" }
zcash_proofs = { path = "../zcash_proofs" }
zip32 = { path = "../zip32" }
