[package]
name = "zcash_wallet"
version = "0.0.0"
authors = [
    "Jack Grigg <jack@z.cash>",
]

[dependencies]
bech32 = "0.5"
bellman = { path = "../bellman" }
exonum_jsonrpc = { version = "0.4.0", optional = true }
failure = "0.1"
hex = "0.3"
hex-serde = { version = "0.1", optional = true }
pairing = { path = "../pairing" }
pirate = { version = "1.0", optional = true }
rand = "0.4"
sapling-crypto = { path = "../sapling-crypto" }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
zcash_primitives = { path = "../zcash_primitives" }
zcash_proofs = { path = "../zcash_proofs" }
zip32 = { path = "../zip32" }

[features]
jsonrpc = ["exonum_jsonrpc", "hex-serde", "serde", "serde_derive", "serde_json"]
rpcsync = ["jsonrpc", "pirate"]

[[example]]
name = "rpcsync"
required-features = ["rpcsync"]
