[package]
name = "zip32"
version = "0.0.0"
authors = [
    "Jack Grigg <jack@z.cash>",
]
license = "MIT/Apache-2.0"

description = "Library for implementing shielded hierarchical deterministic wallets"
documentation = "https://docs.rs/zip32/"
homepage = "https://github.com/zcash-hackworks/zip32"
repository = "https://github.com/zcash-hackworks/zip32"

[dependencies]
aes = "0.3"
byteorder = "1"
fpe = { git = "https://github.com/str4d/fpe", branch = "release-0.2" }
lazy_static = "1.0"
pairing = { path = "../pairing" }
sapling-crypto = { path = "../sapling-crypto" }

[dependencies.blake2-rfc]
git = "https://github.com/gtank/blake2-rfc"
rev = "7a5b5fc99ae483a0043db7547fb79a6fa44b88a9"
